--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "init-msw": "msw init public/"
+    "init-msw": "msw init public/",
+    "test-storybook": "test-storybook"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -37,6 +38,7 @@
     "@storybook/builder-webpack5": "^6.5.6",
     "@storybook/jest": "^0.0.10",
     "@storybook/manager-webpack5": "^6.5.6",
+    "@storybook/test-runner": "^0.7.0",
     "@storybook/testing-library": "^0.0.11",
     "@storybook/vue3": "^6.5.6",
     "@vue/cli-plugin-babel": "~5.0.0",
